# empty-workspace

./: .gitignore  Cargo.toml  README.md  clippy.toml  fission.toml  rust-toolchain.toml  worka-template.toml  worka.plugin.toml
.worka/: abi.toml  policy.toml  publication.toml  template.json  toolchain.toml  workspace.toml
.worka/templates/: dynamic-renderer-usage.md
.worka/templates/generated-app-mcp/: Cargo.toml.template  README.md
.worka/templates/generated-app-mcp/src/: domain.rs.template  domain_service.rs.template  main.rs.template  server.rs.template
app/: Cargo.toml
app/src/: main.rs
crates/app/: Cargo.toml  build.rs
crates/app/assets/: README.md
crates/app/migrations/: README.md
crates/app/src/: app.rs  lib.rs  main.rs  state.rs
crates/packs/: README.md
worka/: blueprint.json  requirements.json  requirements.md  specification.json  specification.md
worka/design-boards/: manifest.json
worka/personaldb/: schema.toml
worka/personaldb/migrations/: 001_initial.sql
