[workspace]
members = ["crates/app", "crates/packs/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Worka workspace scaffold"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
todo = "deny"
unimplemented = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
indexing_slicing = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
disallowed_macros = "deny"
