[package]
name = "app"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
anyhow = "1"
fission = { version = "0.8.0", default-features = false, features = ["desktop"] }
serde = { version = "1", features = ["derive"] }
worka = { git = "ssh://git@github.com/worka-ai/worka-rs.git", branch = "main", default-features = false, features = ["app", "native-tcp"] }

[build-dependencies]
worka = { git = "ssh://git@github.com/worka-ai/worka-rs.git", branch = "main", default-features = false, features = ["plugin-build"] }

[lints]
workspace = true
